# tinyfold

./: .mypy.ini  .pre-commit-config.yaml  CMakeLists.txt  README.md  env.yml  setup.py  test.sh
csrc/: export_quantized_weights.cpp  export_weights.cpp  kernels.h  linear.h  main.cpp  matrix.h  matrix_q.h  matrix_q_test.h  test.cpp  tinyfold.h
csrc/folding/: adaptor.h  adaptor_test.h  geometric.h  ipa.h  ipa_test.h  linear.h  structure_module.h  structure_module_test.h  test.h  to_pdb.h
csrc/plm/: alphabet.h  esm.h  esm_test.h  transformer.h  transformer_kernels.h  transformer_kernels_test.h  transformer_test.h
csrc/utils/: load_tracker.h  pseudo_quant.h  pseudo_quant_test.h  timer.h
data/: .gitignore  download_all.sh
data/testset/: family_0_sequences.txt
efficient_esm/models/: esm2.py  esm_misc.py  esmfold.py  heads.py  structure_module.py  transformer.py  trunk.py
efficient_esm/models/folding/: categorical_mixture.py  misc.py  openfold_data_transforms.py  openfold_feats.py  openfold_protein.py  openfold_rigid_utils.py  residue_constants.py
efficient_esm/models/openfold/: feats.py  protein.py
efficient_esm/models/trunk/: __init__.py  structure_module.py  tri_self_attn_block.py  triangular_attention.py  triangular_multiplicative_update.py  trunk.py
efficient_esm/utils/: export.py  quantize.py
notebooks/: .gitignore  folding.ipynb  pseudo_quantize.ipynb
scripts/: awq_visualization.py  contact_map.py  create_testset.py  evaluate.py  export_esmfold.py  folding.py  generate_test_data.py  generate_unittest_data.py
scripts/generate_test_data/: ipa.py
tinyfold/data/: alphabet.py
tinyfold/models/: esm2.py  esmfold.py  heads.py  structure_module.py  transformer.py
tinyfold/models/openfold/: protein.py  residue_constants.py  rigid_utils.py  tensor_utils.py
tinyfold/utils/: awq.py  quantize.py
