cmake_minimum_required(VERSION 3.10)
project(tinyfold)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
    set(CMAKE_CXX_FLAGS "-O3 -funroll-loops -march=native -fPIC -march=armv8.2-a+dotprod")
elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "x86")
    set(CMAKE_CXX_FLAGS "-O3 -funroll-loops -mavx2 -mfma -ffast-math -fpermissive")
else()
    message(STATUS "Building for unknown architecture: ${CMAKE_SYSTEM_PROCESSOR}")
endif()

set(PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/csrc)

add_executable(main ${PROJECT_SOURCE_DIR}/main.cpp)
add_executable(test ${PROJECT_SOURCE_DIR}/test.cpp)
add_executable(export_weights ${PROJECT_SOURCE_DIR}/export_weights.cpp)

if(APPLE)
    include_directories("/opt/homebrew/opt/libomp/include")
    target_link_libraries(main "/opt/homebrew/opt/libomp/lib/libomp.dylib")
    target_link_libraries(test "/opt/homebrew/opt/libomp/lib/libomp.dylib")
    target_link_libraries(export_weights "/opt/homebrew/opt/libomp/lib/libomp.dylib")
else()
    find_package(OpenMP)
    target_link_libraries(main OpenMP::OpenMP_CXX)
    target_link_libraries(test OpenMP::OpenMP_CXX)
    target_link_libraries(export_weights OpenMP::OpenMP_CXX)
endif()
